[package]
name = "rrmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"]}
crossterm = "0.27.0"
ratatui = "0.25.0"
reqwest = "0.11.23"
scraper = "0.18.1"
tokio = { version = "1.35.1", features = ["rt", "macros"]}

[lib]
name = "rrmm"
path = "src/lib.rs"
